deploy/overlays/dev/bc-challenge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc-challenge-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: bc-challenge.dev.x.x
      http:
        paths:
          - backend:
              service:
                name: bc-challenge
                port:
                  number: 1317
            pathType: Prefix
            path: /api
          - backend:
              service:
                name: bc-challenge
                port:
                  number: 26657
            pathType: Prefix
            path: /rpc
  tls:
    - hosts:
        - bc-challenge.dev.x.x
      secretName: bc-cert-tls
